--- a/assets/templates/scss-lint.yml
+++ b/assets/templates/scss-lint.yml
@@ -44,6 +44,9 @@ linters:
   HexValidation:
     enabled: true
 
+  IdSelector:
+    enabled: false  
+
   IdWithExtraneousSelector:
     enabled: true
 
