--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "generator-vanilla",
-  "version": "0.2.1",
-  "description": "A Yeoman generator for Vanilla that will make your Application, Plugin, and Theme development a breeze.",
+  "name": "generator-vf",
+  "version": "0.0.1",
+  "description": "A Yeoman generator for Vanilla that will make your Plugin and Theme development a breeze.",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "kasperisager/generator-vanilla",
-  "author": {
-    "name": "Kasper Isager",
-    "email": "kasperisager@gmail.com",
-    "url": "https://github.com/kasperisager"
-  },
+  "private": true,
+  "contributors": [
+    {
+      "name": "Kasper Isager",
+      "email": "kasperisager@gmail.com",
+      "url": "https://github.com/kasperisager"
+    },
+    {
+      "name": "Becky Van Bussel",
+      "email": "beckyvanbussel@gmail.com",
+      "url": "https://github.com/beckyvb"
+    }
+  ],
   "engines": {
     "node": ">=0.10.0"
   },
@@ -19,21 +26,17 @@
   "files": [
     "lib",
     "app",
-    "assets",
-    "controller",
-    "locale",
-    "model",
-    "module"
+    "assets"
   ],
   "keywords": [
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.17.0",
-    "chalk": "^0.5.0",
-    "lodash": "^2.4.1",
+    "chalk": "^1.1.3",
+    "langmap": "0.0.x",
+    "lodash": "^4.11.0",
     "lodash-deep": "^1.1.0",
-    "langmap": "0.0.x"
+    "yeoman-generator": "^0.22.0"
   },
   "devDependencies": {
     "mocha": "*",
@@ -42,8 +45,5 @@
     "istanbul": "*",
     "coveralls": "*",
     "mocha-lcov-reporter": "*"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0"
   }
 }
